--- a/src/css/input.less
+++ b/src/css/input.less
@@ -16,6 +16,7 @@
 
 .input-number {
     margin-bottom: 5px;
+	display: inline-block;
 
     label {
         font-size: 11px;
@@ -41,7 +42,7 @@
     .unit-toggler {
         position: absolute;
         top: 1px;
-        right: 14px;
+        right: 12px;
         width: 15px;
         > a {
             font-size: 10px;
