Savepoint before making large changes

--- a/src/css/viewer.less
+++ b/src/css/viewer.less
@@ -105,6 +105,10 @@ body {
 	display: inline !important;
 }
 
+.uno-link {
+	color: @sky-blue;
+}
+
 .element-zindex(@n; @i : 1) when (@i =< @n)
 {
   .uno-el .uno-el {
