--- a/src/css/app.less
+++ b/src/css/app.less
@@ -110,19 +110,37 @@ html, body, #app {
     flex-grow: 1;
     flex-direction: column;
     position: relative;
+    overflow: hidden;
 
     .canvas-builder {
         .flex;
         flex-grow: 1;
         overflow: hidden;
     }
+}
 
-    .code-editor-panel {
-        position: absolute;
-        top: 40px;
+.code-editor-panel {
+    position: absolute;
+    top: 40px;
+    right: 240px;
+    left: 35px;
+    bottom: 0;
+    overflow: hidden;
+    z-index: 999;
+    pointer-events: none;
+
+    #css-editor {
+        pointer-events: all;
         width: 100%;
-        height: 100vh;
-        z-index: 999;
+        opacity: 0.95;
+
+        &.ace-monokai {
+            background-color: @dark-grey;
+        }
+
+        .ace_gutter-active-line, .ace_active-line, .ace_gutter {
+            background-color: @dark;
+        }
     }
 }
 
@@ -822,6 +840,21 @@ html, body, #app {
     padding-top: 0;
     padding-bottom: 0;
     border-bottom: 1px solid transparent;
+
+    &.group {
+		color: #ffffff;
+		vertical-align: middle;
+	    margin: 0;
+		padding: 5px;
+		font-size: 11px;
+		text-align: center;
+		display: inline-block;
+		height: 10px;
+		width: auto;
+		span {
+			vertical-align: -5px;
+		}
+    }
 
     &.active {
         border-top: 1px solid transparent;
