--- a/src/css/element.less
+++ b/src/css/element.less
@@ -33,6 +33,8 @@
         border-radius: 2px;
         background-repeat: no-repeat;
         background-position: 50% 50%;
+        background-size: 100%;
+        background-image: url('../img/component-default.svg');
 
         &.no-border {
             border: 1px solid rgba(0,0,0,0);
