--- a/src/css/app.less
+++ b/src/css/app.less
@@ -199,6 +199,7 @@ html, body, #app {
 .topbar-panel {
     .flex;
     padding: 0 10px;
+    height: 45px;
     background-color: @dark-grey;
     text-align: center;
     justify-content: space-between;
