--- a/src/css/colors.less
+++ b/src/css/colors.less
@@ -17,6 +17,7 @@
 @charcoal-semi-dark: #2b3235;
 @gunmetal-two: #575e60;
 @pastel-red: #dc5a5a;
+@orange: #e98a38;
 @stone: #414141;
 @warm-grey: #979797;
 @windows-blue: #3778c3;
