--- a/src/css/viewer.less
+++ b/src/css/viewer.less
@@ -10,6 +10,10 @@ body {
 	height: 100%;
 }
 
+body.hide-overflow {
+	overflow: hidden;
+}
+
 [data-type="body"] {
 	height: 100%;
 	min-height: 100vh;
