--- a/src/css/viewer.less
+++ b/src/css/viewer.less
@@ -25,7 +25,7 @@ body.hide-overflow {
 	outline:none
 }
 
-.uno-el-wrapper {
+.uno-el-wrapper, .uno-non-el {
 	pointer-events: none;
 	.uno-el {
 		pointer-events: all;
