--- a/src/css/app.less
+++ b/src/css/app.less
@@ -122,7 +122,7 @@ html, body, #app {
 .code-editor-panel {
     position: absolute;
     top: 40px;
-    right: 240px;
+    right: 260px;
     left: 35px;
     bottom: 0;
     overflow: hidden;
@@ -636,6 +636,60 @@ html, body, #app {
             padding-top: 3px;
         }
     }
+
+    .resizer {
+        position: relative;
+        pointer-events: none;
+        height: 100%;
+        &.active {
+            .resizer-h.active, .resizer-v.active {
+                background: @normal-sky-blue;
+            }
+        }
+    }
+
+    .resizer-h {
+        pointer-events:all;
+        position: absolute;
+        height: 100%;
+        width: 5px;
+        &:hover {
+            background: @normal-sky-blue;
+        }
+
+        &--l {
+            cursor: url('../cursor/left-right.cur') 12 12, col-resize;
+            top: 0;
+            left: 0;
+        }
+        &--r {
+            cursor: url('../cursor/left-right.cur') 12 12, col-resize;
+            top: 0;
+            right: 0;
+        }
+    }
+
+    .resizer-v {
+        pointer-events:all;
+        position: absolute;
+        width: 100%;
+        height: 5px;
+        &:hover {
+            background: @normal-sky-blue;
+        }
+        &--t {
+            cursor: url('../cursor/up-down.cur') 12 12, col-resize;
+            top: 0;
+            left: 0;
+            right: 0;
+        }
+        &--b {
+            cursor: url('../cursor/up-down.cur') 12 12, col-resize;
+            bottom: 0;
+            left: 0;
+            right: 0;
+        }
+    }
 }
 
 .hr-line {
@@ -689,6 +743,7 @@ html, body, #app {
         align-items: center;
         justify-content: center;
         height: 65px;
+        width: 180px;
     }
 
     .flex-reverse {
