--- a/src/css/viewer.less
+++ b/src/css/viewer.less
@@ -33,16 +33,36 @@ body.hide-overflow {
 }
 
 .uno-el-empty {
-	border: 1px dashed #000000;
+	outline: 1px dashed #000000;
     outline-offset: -1px !important;
+}
+
+.uno-el-empty[data-kind="column"][data-type="child"] {
+	&:before {
+		content: ' ';
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		background-color: rgba(234, 234, 234, 0.63);
+		top: 0;
+		left: 0;
+	}
+	&:after {
+		content: 'Empty';
+		position: absolute;
+		text-transform: uppercase;
+		top: 50%;
+		left: 50%;
+		-webkit-transform: translate(-50%, -50%);
+		transform: translate(-50%, -50%);
+		font-size: 11px;
+		font-weight: bold;
+		color: #7a7a7a;
+	}
 }
 
 .uno-el {
 	cursor: default;
-	&.uno-el.uno-col-empty {
-		outline: 1px dashed rgba(0,0,0,0.5);
-		outline-offset: -1px !important;
-	}
 }
 
 .uno-grid {
