--- a/src/app/scss/app.scss
+++ b/src/app/scss/app.scss
@@ -247,7 +247,7 @@ html, body, #app {
 .accordion-panel {
     position: relative;
     overflow: hidden;
-    min-height: 450px;
+    height: 100%;
 
     &.uk-accordion {
         padding: 0px 10px 50px;
@@ -472,23 +472,14 @@ html, body, #app {
     }
 }
 
-.right-panel-overlay {
+.popup-overlay {
     position: absolute;
     left: 0;
-    top: 40px;
+    top: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(23, 29, 31, 0.77);
     z-index: 995;
-}
-
-.right-panel-popup {
-    z-index: 999;
-    width: 92%;
-    top: 50%;
-    left: 50%;
-    position: absolute;
-    transform: translate(-50%, -50%);
 }
 
 .right-panel-navbar {
