--- a/src/app/scss/app.scss
+++ b/src/app/scss/app.scss
@@ -135,12 +135,12 @@ html, body, #app {
         }
 
         .tools {
+            @include no-pointer-events;
             position: absolute;
             left: 0;
             top: 0;
             right: 0;
             bottom: 0;
-            pointer-events: none;
             overflow: visible;
             overflow-x: hidden;
             line-height: 12px;
@@ -158,7 +158,7 @@ html, body, #app {
                 width: 100%;
             }
             &.disable {
-                pointer-events: none
+                @include no-pointer-events
             }
             &.display-block-panel {
                 z-index: 11;
@@ -175,7 +175,7 @@ html, body, #app {
     bottom: 0;
     overflow: hidden;
     z-index: 999;
-    pointer-events: none;
+    @include no-pointer-events;
 
     #css-editor {
         pointer-events: all;
@@ -246,8 +246,6 @@ html, body, #app {
 
 .accordion-panel {
     position: relative;
-    overflow: hidden;
-    height: 100%;
 
     &.uk-accordion {
         padding: 0px 10px 50px;
@@ -891,7 +889,7 @@ html, body, #app {
 .canvas-outline {
     position: absolute;
     z-index: 9;
-    pointer-events: none;
+    @include no-pointer-events;
     height: 100vh;
     width: 100%;
     canvas {
