--- a/src/app/scss/app.scss
+++ b/src/app/scss/app.scss
@@ -246,8 +246,8 @@ html, body, #app {
 
 .accordion-panel {
     position: relative;
-    overflow: hidden;
-    height: 100%;
+    min-height: 100%;
+    height: auto;
 
     &.uk-accordion {
         padding: 0px 10px 50px;
