--- a/src/assets/scss/layouts/builder.scss
+++ b/src/assets/scss/layouts/builder.scss
@@ -325,6 +325,10 @@ html, body, #app {
         cursor: default;
         text-decoration: none;
 
+        &:hover {
+            color: $white;
+        }
+
         &:first-child {
             margin-left: 0
         }
