--- a/src/assets/scss/layouts/viewer.scss
+++ b/src/assets/scss/layouts/viewer.scss
@@ -1,11 +1,4 @@
 body {
-	/*overflow: auto;
-	pointer-events: all;
-	height: 100%;*/
-	* {
-		user-select: none;
-	}
-
 	&.hide-overflow {
 		overflow: hidden;
 	}
@@ -16,6 +9,10 @@ body {
 	min-height: 100vh;
 	font-family: 'Open Sans', sans-serif;
 	-webkit-font-smoothing: antialiased;
+
+	* {
+		@include no-user-select;
+	}
 }
 
 [contenteditable] {
