--- a/src/assets/scss/layouts/builder.scss
+++ b/src/assets/scss/layouts/builder.scss
@@ -172,7 +172,7 @@ html, body, #app {
         pointer-events: all;
         width: 100%;
         opacity: 0.95;
-        border-top: 1px solid $prop-bg-border;
+        border: 1px solid lighten($prop-bg-border, 2);
 
         &.ace-monokai {
             background-color: $dark-grey;
