--- a/src/assets/scss/layouts/viewer.scss
+++ b/src/assets/scss/layouts/viewer.scss
@@ -1,3 +1,5 @@
+@import '../utils/mixins.scss';
+
 body {
 	&.hide-overflow {
 		overflow: hidden;
@@ -21,6 +23,10 @@ body {
 }
 
 .uno {
+	&--dragging * {
+		@include grabbing
+	}
+
 	&-el {
 		cursor: default;
 	}
@@ -89,6 +95,29 @@ body {
 
 	&-link {
 		color: $sky-blue;
+	}
+
+	&-component {
+	    padding-right: 7px;
+	    padding-bottom: 10px;
+	    background-color: $charcoal-grey;
+	    min-width: 55px;
+	    text-align: center;
+		position: fixed;
+		visibility: hidden;
+	    @include grab;
+
+	    &--dragging {
+	        @include grabbing;
+	        padding: 10px 8px 2px !important;
+	        min-width: auto !important;
+	        width: 55px;
+	        border-radius: 3px;
+	        box-shadow: 0 1px 10px 3px rgba(0,0,0,0.3);
+	        .icon.no-border {
+	            border: 1px solid $white;
+	        }
+	    }
 	}
 }
 
