Add keycapture outside iframe. Fix scrolling on left panel.

--- a/src/assets/scss/layouts/builder.scss
+++ b/src/assets/scss/layouts/builder.scss
@@ -264,6 +264,8 @@ html, body, #app {
     left: 35px;
     width: 200px;
     z-index: 9;
+    height: 100%;
+    overflow: auto;
 
     .search {
         margin: 0 10px 5px;
