--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -29,3 +29,5 @@
 @import "components/input.scss";
 @import "components/popup.scss";
 @import "components/switcher.scss";
+@import "components/link-editor.scss";
+@import "components/text-editor.scss";
