Add close all panels feature.

--- a/src/assets/scss/components/accordion.scss
+++ b/src/assets/scss/components/accordion.scss
@@ -81,6 +81,11 @@
             color: $white;
         }
 
+        span {
+          cursor: pointer;
+          margin-left: 5px;
+        }
+
         .uk-icon-caret-down {
             display: none
         }
