--- a/src/assets/scss/components/accordion.scss
+++ b/src/assets/scss/components/accordion.scss
@@ -13,6 +13,11 @@
 
     .accordion-wrapper {
         position: relative;
+        &--disabled {
+          .accordion-title, .uk-icon-caret-right:before {
+            color: $gunmetal-two;
+          }
+        }
     }
 
     .switcher-handler {
@@ -65,7 +70,7 @@
         }
     }
 
-    .uk-accordion-title {
+    .accordion-title {
         margin: 0;
         color: $white;
         font-size: 12px;
