--- a/src/assets/scss/layout/_left_panel.scss
+++ b/src/assets/scss/layout/_left_panel.scss
@@ -1,6 +1,7 @@
 .#{$prefix} {
   &__left-panel,
   &__left-panel-components {
+    @include OpenSans;
     height: 100%;
     left: 0;
     top: 0;
@@ -43,22 +44,81 @@
     polyline {
       stroke: $white;
     }
-  }
 
-  &__left-panel-components {
-    box-sizing: border-box;
-    background: $charcoal-grey;
-    width: 200px;
-    left: 30px;
-    z-index: 31;
-    padding: 40px 10px 10px;
+    &-components {
+      box-sizing: border-box;
+      background: $charcoal-grey;
+      width: 200px;
+      left: 30px;
+      z-index: 31;
+      padding: 40px 10px 10px;
+    }
 
-    &.animate {
-      &--slide-in {
-        @include animation(slideInLeft);
+    &-search-components {
+      position: relative;
+      margin-bottom: 15px;
+      .close {
+        position: absolute;
+        top: 5px;
+        right: 0px;
+        padding: 0;
+        svg {
+          width: 9px;
+          height: 9px;
+        }
       }
-      &--slide-out {
-        @include animation(slideOutLeft);
+    }
+
+    &-component-items {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      &.margin-auto {
+        &> div {
+          &:first-child {
+            margin-left: 0;
+          }
+          &:last-child {
+            margin-right: auto;
+            margin-left: 15px;
+          }
+          &:nth-child(3n+1) {
+            margin-left: 0 !important;
+          }
+        }
+      }
+    }
+
+    &-css-editor {
+      pointer-events: all;
+      position: fixed !important;
+      top: 40px;
+      left: 30px;
+      width: 100vw;
+      height: calc(100vh - 40px);
+      z-index: 32;
+      opacity: 0.98;
+      border: 1px solid lighten($dark, 2);
+      background: $dark-grey;
+      &.not-active {
+        display: none;
+      }
+      .ace-monokai {
+        font-family: monospace;
+        font-size: 14px;
+        height: 100%;
+        width: calc(100% - 270px);
+        background: none;
+        margin-bottom: 20px;
+        .ace_gutter-active-line,
+        .ace_active-line, .ace_gutter {
+          background-color: $dark;
+        }
+        .ace_storage.ace_type,
+        .ace_support.ace_class,
+        .ace_support.ace_type {
+          font-style: normal;
+        }
       }
     }
   }
@@ -67,6 +127,32 @@
     label {
       margin: 10px 0;
       display: block;
+    }
+  }
+
+  &__grid-item {
+    width: 50px;
+    margin-bottom: 10px;
+    .image {
+      height: 50px;
+      max-height: 50px;
+      background-repeat: no-repeat;
+      background-position: 50% 50%;
+      margin-bottom: 5px;
+      opacity: 0.7;
+      &.no-image {
+        background-image: url('#{$assets_path}/img/uno-logo.svg');
+        background-size: contain;
+      }
+      &:hover {
+        opacity: 1;
+      }
+    }
+    .label {
+      display: block;
+      color: $white;
+      font-size: 10px;
+      text-align: center;
     }
   }
 }
