fix working element selector, component panel, and css editor

--- a/src/assets/scss/canvas.scss
+++ b/src/assets/scss/canvas.scss
@@ -1,4 +1,5 @@
 @import "utils";
 @import "base/vars";
 @import "base/fonts";
-@import "canvas/base"
+@import "canvas/base";
+@import "canvas/elements";
