--- a/src/assets/scss/layout.scss
+++ b/src/assets/scss/layout.scss
@@ -4,5 +4,6 @@
 @import "layout/left_panel";
 @import "layout/right_panel";
 @import "layout/workspace";
+@import "layout/canvas_tools";
 @import "layout/screen_tools";
 @import "layout/properties";
