fix working block components

--- a/src/assets/scss/base/_fields.scss
+++ b/src/assets/scss/base/_fields.scss
@@ -29,7 +29,7 @@
         text-transform: uppercase;
       }
       &.label--bold {
-        font-weight: bold;
+        font-weight: 600;
       }
       &.label--inline {
         display: inline-block
