add empty space after root element

--- a/src/assets/scss/canvas/_elements.scss
+++ b/src/assets/scss/canvas/_elements.scss
@@ -1,6 +1,12 @@
 .#{$prefix}:not(.preview--mode) {
-  padding-bottom: 165px;
   .#{$prefix-short} {
+    &-g-layout {
+      &:after {
+        content: ' ';
+        padding-bottom: 165px;
+        display: block;
+      }
+    }
     &-empty {
       outline: 1px dashed #555 !important;
       outline-offset: -1px !important;
