--- a/src/assets/scss/layout/_canvas_tools.scss
+++ b/src/assets/scss/layout/_canvas_tools.scss
@@ -37,13 +37,17 @@ $selector-border-width: 2px;
       transform-style: preserve-3d;
     }
 
-    &-selector {
+    &-tools {
+      pointer-events: none;
+      position: absolute;
       pointer-events: none;
       position: absolute;
       left: 0;
       width: 100%;
       height: 100%;
+    }
 
+    &-selector {
       &__hovered,
       &__selected {
         top: 0;
@@ -201,6 +205,7 @@ $selector-border-width: 2px;
           padding: 0;
           li {
             display: inline-flex;
+            margin: 0 5px;
           }
           a {
             @include OpenSans;
@@ -239,7 +244,6 @@ $selector-border-width: 2px;
 
         .image {
           pointer-events: all;
-          width: 100px;
           min-width: 100px;
           min-height: 70px;
           margin-bottom: 5px;
@@ -257,6 +261,51 @@ $selector-border-width: 2px;
           font-weight: 600;
           text-align: center;
           color: $white;
+        }
+      }
+    }
+
+    &-context-menu {
+      background-color: $dark-grey;
+      pointer-events: all;
+      position: absolute;
+      z-index: 30;
+      width: 180px;
+      display: flex;
+      padding: 5px 0;
+      flex-direction: column;
+      border-radius: 3px;
+
+      .separator {
+        height: 1px;
+        background: darken($gunmetal, 10);
+        display: block;
+        margin: 5px 0;
+      }
+
+      a {
+        @include OpenSans;
+        display: block;
+        padding: 2px 10px;
+        font-size: 11px;
+        color: $white;
+        text-decoration: none;
+        display: flex;
+        flex-direction: row;
+        cursor: default;
+
+        &:hover {
+          background-color: $gunmetal;
+        }
+
+        .label {
+          font-weight: 600;
+        }
+
+        .shortcut {
+          margin-left: auto;
+          font-style: italic;
+          font-weight: 100;
         }
       }
     }
